<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <include layout="@layout/common_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <VideoView
                android:id="@+id/ProgramPlayer"
                android:layout_width="wrap_content"
                android:layout_height="159dp"
                android:background="@drawable/appmain_subject_1" />

            <LinearLayout
                android:id="@+id/ChannelDetail_ShareView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/share"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="内容分享"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#23181e" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ChannelDetail_ProgramTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/programTitle"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="18dp"
                        android:background="@drawable/good" />

                    <TextView
                        android:id="@+id/Program_Star"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:gravity="bottom"
                        android:text="@string/Program_Star"
                        android:textColor="#000000"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#23181e" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"

                            android:background="@drawable/share"
                            android:gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:gravity="center"
                            android:text="@string/Program_ChoiceHeaderStr"
                            android:textColor="#000000"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="#23181e" />

                    <com.edu.zjicm.programrec.View.CustomExpandableListView
                        android:id="@+id/ChannelDetail_ChoiceGroupListView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="#23181e" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"

                            android:background="@drawable/share"
                            android:gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:gravity="center"
                            android:text="@string/Program_ChartHeaderStr"
                            android:textColor="#000000"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <com.edu.zjicm.programrec.View.CustomListView
                        android:id="@+id/ChannelDetail_CommentGroupListView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:editable="true"
                        android:enabled="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:text="@string/commentStr"
                        android:textColor="#474639"
                        android:textSize="20sp" />


                    <Button
                        android:id="@+id/add"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:text="发表" />


                </LinearLayout>
            </ScrollView>


        </LinearLayout>

    </LinearLayout>

    <fragment
        android:id="@+id/navigation_drawer"
        android:name="com.edu.zjicm.programrec.Fragment.NavigationDrawerFragment"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        tools:layout="@layout/fragment_navigation_drawer" />
</android.support.v4.widget.DrawerLayout>